# semantic-cache

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmark/: run.py
dashboard/: app.py
examples/: simple_usage.py
semantic_cache/: __init__.py  cache.py  config.py  embeddings.py  engine.py  fingerprint.py  logging.py  metrics.py  models.py  vector_store.py
semantic_cache/providers/: __init__.py  base.py  gemini.py
tests/: test_engine.py  test_fingerprint.py  test_providers.py  test_vector_store.py
