[project]
name = "semantic-cache"
version = "0.1.0"
description = "Python library for semantic caching of LLM responses using exact matching, vector similarity search, and pluggable provider interfaces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.8.0",
    "google-genai>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "opentelemetry-api>=1.20.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["semantic_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=semantic_cache --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
